[package]
name = "plain-yew-weather-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
wasm-bindgen = "0.2.83"
yew = { version = "0.20.0", features = ["csr"] }
genco = "0.17.2"
chrono = "0.4.23"
lazy_static = "1.4.0"
itertools = "0.10.5"
stylist = { version = "0.11.0", features = ["parser", "yew_integration"] }
yew-router = "0.17.0"
wasm-bindgen-futures = "0.4.33"
reqwest = { version = "0.11.13", features = ["serde_json", "json"] }
yew-hooks = "0.2.0"
localzone = { version = "0.2.0", features = ["chrono-tz"] }
chrono-tz = "0.8.1"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "Event",
    "MouseEvent",
    "HtmlCollection",
    "HtmlFormElement",
    "FormData",
]
